--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/aradhna-abraham-iitbhu?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BzZ0Aw1a%2BRN%2BGmqTXT%2Fd2yw%3D%3D">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/AbrahamAradhna">Twitter</a>
+      <a class="footer-link" href="https://www.instagram.com/ban__aana/">Instagram</a>
       <p class="copyright-name">© 2022 Aradhna Abraham.</p>
     </div>
 
