--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>If you love music as much as I do.</h3>
-        <p class="conact-message">Love guitar asa much as I do? Lets talk about how awesome they are! We can code while we eat hot wings!!</p>
+        <p class="conact-message">Love guitar as much as I do? Lets talk about how awesome they are! We can code while we listen to some music!!</p>
         <a class="btn" href="mailto:aradhna.abraham@email.com">CONTACT ME</a>
       </div>
     </div>
